--- a/animation/css.html
+++ b/animation/css.html
@@ -83,7 +83,7 @@
     <div class="bs-header bgs5" id="content">
         <div class="container">
             <h1>CSS Animation v1.0 &lt;/doc&gt;</h1>
-            <p><a href="#" target="_blank">mail</a></p>
+            <p><a href="#" target="_blank">Dabin</a></p>
         </div>
     </div>
 
@@ -321,7 +321,7 @@
                     <style>
                         .step {
                             height: 700px;
-                            background: #ffe8d9;
+                            background: #fff0ed;
                             position: relative;
                         }
                         .step .stepbox {
