--- a/animation/svg.html
+++ b/animation/svg.html
@@ -71,7 +71,7 @@
     <div class="bs-header bgs5" id="content">
         <div class="container">
             <h1>SVG Animation v1.0 &lt;/doc&gt;</h1>
-            <p><a href="#" target="_blank">mail</a></p>
+            <p><a href="#" target="_blank">Dabin</a></p>
         </div>
     </div>
     <div class="container bs-docs-container">
@@ -177,32 +177,32 @@
                         </div>
                     </div>
 <pre class="line-numbers language-html"><code>&lt;div class="svgBox svg1"&gt;
-    &lt;svg&gt;
-        &lt;circle fill="#F48FB1" r="60" cx="80" cy="80" /&gt;
-    &lt;/svg&gt;
-    &lt;svg&gt;
-        &lt;circle fill="#F48FB1" r="60" cx="80" cy="80" stroke="#880E4F" stroke-width="5" /&gt;
-    &lt;/svg&gt;
-    &lt;svg&gt;
-        &lt;ellipse fill="#F48FB1" rx="60" ry="40" cx="80" cy="80" /&gt;
-    &lt;/svg&gt;
-    &lt;svg&gt;
-        &lt;ellipse fill="#F48FB1" rx="60" ry="40" cx="80" cy="80" stroke="#880E4F" stroke-width="5" /&gt;
-    &lt;/svg&gt;
-    &lt;svg&gt;
-        &lt;ellipse fill="#F48FB1" rx="40" ry="60" cx="80" cy="80" /&gt;
-    &lt;/svg&gt;
-    &lt;svg&gt;
-        &lt;ellipse fill="#F48FB1" rx="40" ry="60" cx="80" cy="80" stroke="#880E4F" stroke-width="5" /&gt;
-    &lt;/svg&gt;
-&lt;/div&gt;
+        &lt;svg&gt;
+            &lt;circle fill="#F48FB1" r="60" cx="80" cy="80" /&gt;
+        &lt;/svg&gt;
+        &lt;svg&gt;
+            &lt;circle fill="#F48FB1" r="60" cx="80" cy="80" stroke="#880E4F" stroke-width="5" /&gt;
+        &lt;/svg&gt;
+        &lt;svg&gt;
+            &lt;ellipse fill="#F48FB1" rx="60" ry="40" cx="80" cy="80" /&gt;
+        &lt;/svg&gt;
+        &lt;svg&gt;
+            &lt;ellipse fill="#F48FB1" rx="60" ry="40" cx="80" cy="80" stroke="#880E4F" stroke-width="5" /&gt;
+        &lt;/svg&gt;
+        &lt;svg&gt;
+            &lt;ellipse fill="#F48FB1" rx="40" ry="60" cx="80" cy="80" /&gt;
+        &lt;/svg&gt;
+        &lt;svg&gt;
+            &lt;ellipse fill="#F48FB1" rx="40" ry="60" cx="80" cy="80" stroke="#880E4F" stroke-width="5" /&gt;
+        &lt;/svg&gt;
+    &lt;/div&gt;
 </code></pre>
                 </div>
                 <!-- //Intro2 -->
 
                 <!-- Intro3 -->
                 <div class="bs-docs-section">
-                    <h2 id="intro2" class="page-header">다각형(polygon)</h2>
+                    <h2 id="intro3" class="page-header">다각형(polygon)</h2>
                     <div class="sample">
                         <h3><span></span><em class="sr-only">svg</em></h3>
                         <div class="svgBox svg3">
@@ -532,7 +532,7 @@
                     }
                 </style>
                 <div class="bs-docs-section">
-                    <h2 id="intro6" class="page-header">클리핑 마스크(Clip-path)</h2>
+                    <h2 id="intro7" class="page-header">클리핑 마스크(Clip-path)</h2>
                     <div class="sample">
                         <h3><span></span><em class="sr-only">svg</em></h3>
                         <div class="svgBox svg3">
@@ -660,31 +660,66 @@
                     }
                 </style>
                 <div class="bs-docs-section">
-                    <h2 id="intro6" class="page-header">애니메이션</h2>
+                    <h2 id="intro8" class="page-header">애니메이션</h2>
                     <div class="sample">
                         <h3><span></span><em class="sr-only">svg</em></h3>
                         <div class="svgBox svg8">
                             <svg>
-                                <rect class="ani1">
+                                <rect class="ani1"></rect>
                             </svg>
                             <svg>
-                                <rect class="ani2">
+                                <rect class="ani2"></rect>
                             </svg>
-                            <svg>
-                                <rect class="ani3">
+                            <svg style="background: #E3F3FD">
+                                <path class="ani3" fill="none" stroke="#0D47A1" stroke-width="2" d="M7,154.667c0-82.358,65.152-149,145.667-149"/>
                             </svg>
-                            <svg>
-                                <rect class="ani4">
+                            <svg style="background: #E3F3FD">
+                                <path class="ani4" fill="none" stroke="#0D47A1" stroke-width="2" d="M151.534,123.547c-33.711,33.711-88.369,33.711-122.08,0
+        c-26.97-26.969-26.97-70.695,0-97.665c21.575-21.576,56.556-21.576,78.131,0c17.261,17.26,17.261,45.245,0.001,62.504
+        c-13.809,13.809-36.196,13.809-50.005,0c-11.046-11.046-11.046-28.956,0-40.002c8.837-8.837,23.166-8.837,32.003,0
+        c7.069,7.07,7.07,18.532,0,25.602c-5.656,5.657-14.826,5.657-20.482,0c-4.524-4.524-4.524-11.86,0-16.385"/>
                             </svg>
-                            <svg>
-                                <rect class="ani5">
+                            <svg style="background: #E3F3FD">
+                                <path class="ani5" fill="none" stroke="#0D47A1" stroke-width="2" d="M58.665,139.312c0-6.873,42-6.873,42-13.747s-42-6.874-42-13.748
+                                s42-6.874,42-13.748c0-6.872-42-6.872-42-13.744c0-6.874,42-6.874,42-13.747c0-6.877-42-6.877-42-13.753
+                                c0-6.874,42-6.874,42-13.748c0-6.878-42-6.878-42-13.757s42-6.879,42-13.758"/>
                             </svg>
-                            <svg>
-                                <rect class="ani6">
+                            <svg style="background: #E3F3FD">
+                                <path class="ani6" fill="none" stroke="#0D47A1" stroke-width="2" d="M93.108,91.478c42.049,30.58-13.048,57.425-13.347,6.503
+                                c0.299,50.922-55.041,24.58-13.405-6.381c-41.636,30.961-55.545-28.728-3.37-14.458c-52.176-14.27-14.181-62.359,9.204-11.649
+                                c-23.385-50.71,37.901-50.989,14.846-0.067c23.055-50.922,61.484-3.179,9.309,11.565C148.521,62.245,135.157,122.058,93.108,91.478
+                                z"/>
                             </svg>
                         </div>
                     </div>
-<pre class="line-numbers language-html"><code>    
+<pre class="line-numbers language-html"><code>     &lt;div class="svgBox svg8">
+        &lt;svg>
+            &lt;rect class="ani1">&lt;/rect>
+        &lt;/svg>
+        &lt;svg>
+            &lt;rect class="ani2">&lt;/rect>
+        &lt;/svg>
+        &lt;svg style="background: #E3F3FD">
+            &lt;path class="ani3" fill="none" stroke="#0D47A1" stroke-width="2" d="M7,154.667c0-82.358,65.152-149,145.667-149"/>
+        &lt;/svg>
+        &lt;svg style="background: #E3F3FD">
+            &lt;path class="ani4" fill="none" stroke="#0D47A1" stroke-width="2" d="M151.534,123.547c-33.711,33.711-88.369,33.711-122.08,0
+            c-26.97-26.969-26.97-70.695,0-97.665c21.575-21.576,56.556-21.576,78.131,0c17.261,17.26,17.261,45.245,0.001,62.504
+            c-13.809,13.809-36.196,13.809-50.005,0c-11.046-11.046-11.046-28.956,0-40.002c8.837-8.837,23.166-8.837,32.003,0
+            c7.069,7.07,7.07,18.532,0,25.602c-5.656,5.657-14.826,5.657-20.482,0c-4.524-4.524-4.524-11.86,0-16.385"/>
+        &lt;/svg>
+        &lt;svg style="background: #E3F3FD">
+            &lt;path class="ani5" fill="none" stroke="#0D47A1" stroke-width="2" d="M58.665,139.312c0-6.873,42-6.873,42-13.747s-42-6.874-42-13.748
+            s42-6.874,42-13.748c0-6.872-42-6.872-42-13.744c0-6.874,42-6.874,42-13.747c0-6.877-42-6.877-42-13.753
+            c0-6.874,42-6.874,42-13.748c0-6.878-42-6.878-42-13.757s42-6.879,42-13.758"/>
+        &lt;/svg>
+        &lt;svg style="background: #E3F3FD">
+            &lt;path class="ani6" fill="none" stroke="#0D47A1" stroke-width="2" d="M93.108,91.478c42.049,30.58-13.048,57.425-13.347,6.503
+            c0.299,50.922-55.041,24.58-13.405-6.381c-41.636,30.961-55.545-28.728-3.37-14.458c-52.176-14.27-14.181-62.359,9.204-11.649
+            c-23.385-50.71,37.901-50.989,14.846-0.067c23.055-50.922,61.484-3.179,9.309,11.565C148.521,62.245,135.157,122.058,93.108,91.478
+            z"/>
+        &lt;/svg>
+    &lt;/div>
 </code></pre>
                 </div>
                 <!-- //Intro8 -->
