--- a/animation/css.html
+++ b/animation/css.html
@@ -231,6 +231,7 @@
                     </div>
                 </div>
                 <!-- //Intro0 -->
+
                 <style>
                     .timing.bg1 > div {background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%);}
                     .timing.bg7 > div {background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%);}
@@ -285,7 +286,6 @@
                 </div>
                 <!-- //Intro1 -->
 
-                
                 <style>
                     .timing.bg2 > div {background-image: linear-gradient(-20deg, #b721ff 0%, #21d4fd 100%);}
                     .timing.bg9 > div {background-image: linear-gradient(-20deg, #b721ff 0%, #21d4fd 100%);}
@@ -317,7 +317,7 @@
 .timing9.show {animation: move 4s 1 steps(4, end);}
 .timing10.show {animation: move 4s 1 steps(10, start);}
 .timing11.show {animation: move 4s 1 steps(10, end);}
-</code></pre>       
+</code></pre>
                     <style>
                         .step {
                             height: 700px;
@@ -352,7 +352,6 @@
                             margin: 3px;
                             border-radius: 3px;
                         }
-
                     </style>
                     <div class="sample">
                         <h3><span></span><em class="sr-only">border-radius</em></h3>
@@ -490,8 +489,6 @@
                 </div>
                 <!-- //Intro6 -->
 
-
-
                 <style>
                     .timing26.show {animation: move3 3s 1 ease; animation-fill-mode: none;}
                     .timing27.show {animation: move3 3s 1 ease; animation-fill-mode: forwards;}
@@ -597,7 +594,27 @@
                             <div class="timing37"><span>timing37</span></div>
                         </div>
                     </div>
-<pre class="line-numbers language-css"><code>
+<pre class="line-numbers language-css"><code>    .timing.bg9 {display: flex; justify-content: space-between; min-height: 400px;}
+    .timing.bg9 > div.ani1 {animation: slideOutRight 1s ease;}
+    .timing.bg9 > div.ani2 {animation: headShake 1s 10 ease;}
+    .timing.bg9 > div.ani3 {}
+    .timing.bg9 > div.ani4 {}
+    .timing.bg9 > div.ani5 {}
+    .timing.bg9 > div.ani6 {}
+    .timing.bg9 > div.ani7 {}
+
+    @keyframes slideOutRight {
+        from {
+            -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+        }
+
+        to {
+            visibility: hidden;
+            -webkit-transform: translate3d(100%, 0, 0);
+            transform: translate3d(100%, 0, 0);
+        }
+    }
 </code></pre> 
                 </div>
                 <!-- //Intro9 -->
