--- a/animation/svg.html
+++ b/animation/svg.html
@@ -540,7 +540,7 @@
                                 <text fill="#212730" x="7" y="110" font-family="SCoreDream" font-size="70" font-weight="900">SVG</text>
                                 <svg>
                                     <pattern id="pattern1" patternunites="useSpaceOuUse" width="100%" height="100%">
-                                        <image xlink:href="img/bg.jpg" width="160" height="160" />
+                                        <image url("https://raw.githubusercontent.com/kdb6/ck/main/animation/img/ani.jpg") width="160" height="160" />
                                     </pattern>
                                     <text fill="url(#pattern1)" x="7" y="110" font-family="SCoreDream" font-size="70" font-weight="900">SVG</text>
                                 </svg>
