--- a/site/test02/test02.html
+++ b/site/test02/test02.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test02</title>
 
+    <!-- <link rel="stylesheet" href="css/testSlider.css"> -->
+
     <style>
         /* fonts */
         @import url('https://webfontworld.github.io/score/SCoreDream.css');
@@ -87,8 +89,53 @@
         .menu ul li {
             display: inline-block;
             margin-top: 15px;
-            margin-left: 50px;
+            margin-left: 52px;
             font-weight: 600;
+        }
+
+        /* slider */
+        .slider__wrap {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .slider__img {
+            position: relative;
+            width: 1000px;
+            height: 400px;
+            overflow: hidden;
+        }
+        .slider__inner {
+            display: flex;
+            flex-wrap: wrap;
+            width: 5000px;
+            height: 400px;
+        }
+        .slider {
+            position: relative;
+            width: 1000px;
+            height: 400px;
+        }
+        .slider::before {
+            position: absolute;
+            left: 5px;
+            top: 5px;
+            background: rgba(0, 0, 0, 0.4);
+            color: #fff;
+            padding: 5px 10px;
+        }
+        .slider:nth-child(1)::before {}
+        .slider:nth-child(2)::before {}
+        .slider:nth-child(3)::before {}
+        .slider:nth-child(4)::before {}
+
+        @media(max-width: 800px) {
+            .slider__img {
+            position: relative;
+            width: 400px;
+            height: 225px;
+            }
         }
 
         /* miBanner */
@@ -248,11 +295,11 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li>COOKIT소개</li>
-                    <li>COOKIT메뉴</li>
-                    <li>리뷰</li>
-                    <li>이벤트</li>
-                    <li>MY쿡킷</li>
+                    <li><a href="#">COOKIT소개</a></li>
+                    <li><a href="#">COOKIT메뉴</a></li>
+                    <li><a href="#">리뷰</a></li>
+                    <li><a href="#">이벤트</a></li>
+                    <li><a href="#">MY쿡킷</a></li>
                 </ul>
             </div>
         </div>
@@ -261,8 +308,14 @@
     <!-- slider -->
     <section id="sliderType" class="slider__wrap score section">
         <div class="container">
-            <div class="sLider">
-                <img src="img/slider01.jpg" alt="">
+            <div class="slider__wrap">
+                <div class="slider__img">
+                    <div class="slider__inner">
+                        <div class="slider"><img src="img/slider01.jpg" alt="slider01"></div>
+                        <div class="slider"><img src="img/slider01.jpg" alt="slider01"></div>
+                        <div class="slider"><img src="img/slider01.jpg" alt="slider01"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -364,5 +417,41 @@
             </div>
         </div>
     </section>
+
+    <script>
+        const sliderWrap = document.querySelector(".slider__wrap");
+        const sliderImg = document.querySelector(".slider__img");          // 보여지는 영역
+        const sliderInner = document.querySelector(".slider__inner");      // 움직이는 영역
+        const slider = document.querySelectorAll(".slider");               // 각각 이미지
+
+        let currentIndex = 0;                                               // 현재 보이는 이미지
+        let sliderCount = slider.length;                                    // 이미지 갯수
+        let sliderWidth = sliderImg.offsetWidth;                            // 이미지 가로 값
+        let sliderClone = sliderInner.firstElementChild.cloneNode(true);    // 첫번째 이미지 복사
+        sliderInner.appendChild(sliderClone);                               // 슬라이드 이미지를 마지막에 넣어줌
+
+        function sliderEffect() {
+            currentIndex++;
+            sliderInner.style.transition = "all 0.6s";
+            sliderInner.style.transform = "translateX(-"+ sliderWidth * currentIndex +"px)";
+
+            // sliderInner.style.transform = "translateX(-800px)";
+            // sliderInner.style.transform = "translateX(-1600px)";
+            // sliderInner.style.transform = "translateX(-2400px)";
+            // sliderInner.style.transform = "translateX(-3200px)";
+            // sliderInner.style.transform = "translateX(-4000px)";
+            // sliderInner.style.transform = "translateX(-4800px)";
+
+            // 마지막 사진에 위치했을 때
+            if(currentIndex == sliderCount) {
+                setTimeout(() => {
+                    sliderInner.style.transition = "0s";
+                    sliderInner.style.transform = "translateX(0px)";
+                }, 700);
+                currentIndex = 0;
+            }
+        }
+        setInterval(sliderEffect, 2000);
+    </script>
 </body>
 </html>
