--- a/javascript/effect/parallaxEffect02.html
+++ b/javascript/effect/parallaxEffect02.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>패럴랙스 이펙트01</title>
+    <title>패럴랙스 이펙트 02</title>
     <link rel="stylesheet" href="../assets/css/parallax.css">
     <link rel="stylesheet" href="../assets/css/dracula.css">
 
@@ -151,6 +151,44 @@
         .parallax__info li, .scrollTop {
             line-height: 1.4;
         }
+        #parallax__dot {
+            position: fixed;
+            right: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: 2000;
+            background-color: #00000040;
+            padding: 20px 10px;
+            border-radius: 30px;
+        }
+        #parallax__dot li {
+            position: relative;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            margin: 12px 8px;
+            box-shadow: 0 0 0 2px rgba(255, 255, 255, 0);
+            transition: box-shadow 0.2s ease;
+        }
+        #parallax__dot li a {
+            background: #fff;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            border-radius: 50%;
+            transition: transform 0.2s ease;
+        }
+        #parallax__dot li span {
+            display: none;
+        }
+        #parallax__dot li.active {
+            box-shadow: 0 0 0 2px rgba(255, 255, 255, 1);
+        }
+        #parallax__dot li.active a {
+            transform: scale(0.4);
+        }
 
         @media (max-width: 800px) {
             #parallax__cont {
@@ -188,11 +226,11 @@
 </head>
 <body>
     <header id="header">
-        <h1>Javascript Mouse Effect01</h1>
+        <h1>Javascript Mouse Effect02</h1>
         <p>패럴렉스 이펙트 - 메뉴 이동</p>
         <ul>
-            <li class="active"><a href="parallaxEffect01.html">1</a></li>
-            <li><a href="parallaxEffect02.html">2</a></li>
+            <li><a href="parallaxEffect01.html">1</a></li>
+            <li class="active"><a href="parallaxEffect02.html">2</a></li>
             <li><a href="parallaxEffect03.html">3</a></li>
             <li><a href="parallaxEffect04.html">4</a></li>
             <li><a href="parallaxEffect05.html">5</a></li>
@@ -202,17 +240,17 @@
     </header>
     <!-- //header -->
 
-    <nav id="parallax__nav">
+    <nav id="parallax__dot">
         <ul>
-            <li class="active"><a href="#section1">메뉴1</a></li>
-            <li><a href="#section2">메뉴2</a></li>
-            <li><a href="#section3">메뉴3</a></li>
-            <li><a href="#section4">메뉴4</a></li>
-            <li><a href="#section5">메뉴5</a></li>
-            <li><a href="#section6">메뉴6</a></li>
-            <li><a href="#section7">메뉴7</a></li>
-            <li><a href="#section8">메뉴8</a></li>
-            <li><a href="#section9">메뉴9</a></li>
+            <li class="active"><a href="#section1"><span>메뉴1</span></a></li>
+            <li><a href="#section2"><span>메뉴2</span></a></li>
+            <li><a href="#section3"><span>메뉴3</span></a></li>
+            <li><a href="#section4"><span>메뉴4</span></a></li>
+            <li><a href="#section5"><span>메뉴5</span></a></li>
+            <li><a href="#section6"><span>메뉴6</span></a></li>
+            <li><a href="#section7"><span>메뉴7</span></a></li>
+            <li><a href="#section8"><span>메뉴8</span></a></li>
+            <li><a href="#section9"><span>메뉴9</span></a></li>
         </ul>
     </nav>
     <!-- //nav -->
@@ -316,19 +354,6 @@
 
     <aside id="parallax__info">
         <div class="scroll">scrollTop : <span>0</span>px</div>
-        <div class="info">
-            <ul>
-                <li>#section1 offset() : <span class="offset1">0</span>px</li>
-                <li>#section2 offset() : <span class="offset2">0</span>px</li>
-                <li>#section3 offset() : <span class="offset3">0</span>px</li>
-                <li>#section4 offset() : <span class="offset4">0</span>px</li>
-                <li>#section5 offset() : <span class="offset5">0</span>px</li>
-                <li>#section6 offset() : <span class="offset6">0</span>px</li>
-                <li>#section7 offset() : <span class="offset7">0</span>px</li>
-                <li>#section8 offset() : <span class="offset8">0</span>px</li>
-                <li>#section9 offset() : <span class="offset9">0</span>px</li>
-            </ul>
-        </div>
     </aside>
     <!-- aside -->
 
@@ -429,116 +454,40 @@
     </script>
 
     <script>
-        const scroll = document.querySelector("#parallax__info .scroll span");
+        document.querySelectorAll("#parallax__dot a").forEach(el => {
+            el.addEventListener("click", e => {
+                e.preventDefault();
 
-        window.addEventListener("scroll", () => {
-            // let scrollTop = window.pageYOffset;                      // 첫 번째 방법
-            // let scrollTop = window.scrollY;                          // 두 번째 방법
-            // let scrollTop = document.documentElement.scrollTop;      // 세 번째 방법
-            let scrollTop = window.pageYOffset || window.scrollY || document.documentElement.scrollTop;
-
-            // forEach
-            document.querySelectorAll(".content__item").forEach((element, index) => {
-                if(scrollTop >= element.offsetTop -2) {
-                    document.querySelectorAll("#parallax__nav li").forEach(li => {
-                        li.classList.remove("active");
-                    });
-                    document.querySelector("#parallax__nav li:nth-child("+(index+1)+")").classList.add("active");
-                }
-            });
-
-            // info
-            document.querySelector(".scroll span").innerText = Math.round(scrollTop);
-
-            for(let i=1; i<=9; i++) {
-                document.querySelector(".offset"+i).innerText = document.getElementById("section"+i).offsetTop;
-            }
+                document.querySelector(el.getAttribute("href")).scrollIntoView({behavior: "smooth"});
+            })
         });
 
-        // 스크롤 이동
-        document.querySelectorAll("#parallax__nav li a").forEach(li => {
-            li.addEventListener("click", (e) => {
-                e.preventDefault();
-                document.querySelector(li.getAttribute("href")).scrollIntoView({
-                    behavior: "smooth"
-                });
+        window.addEventListener("scroll", () => {
+            let scrollTop = window.pageYOffset || window.scrollY || document.documentElement.scrollTop;
+            
+            document.querySelector("#parallax__info span").innerText = Math.floor(scrollTop);
+
+            document.querySelectorAll(".content__item").forEach((e,i) => {
+                if(scrollTop >= e.offsetTop -2) {
+                    document.querySelectorAll("#parallax__dot li").forEach(li => {
+                        li.classList.remove("active");
+                    })
+                    document.querySelector("#parallax__dot li:nth-child("+(i+1)+")").classList.add("active")
+                }
             })
         })
 
-            // if(scrollTop >= document.getElementById("section1").offsetTop) {
-            //     document.querySelectorAll("#parallax__nav li").forEach(li => {
-            //         li.classList.remove("active");
-            //     });
-            //     document.querySelector("#parallax__nav li:nth-child(1)").classList.add("active");
-            // }
-            // if(scrollTop >= document.getElementById("section2").offsetTop -2) {
-            //     document.querySelectorAll("#parallax__nav li").forEach(li => {
-            //         li.classList.remove("active");
-            //     });
-            //     document.querySelector("#parallax__nav li:nth-child(2)").classList.add("active");
-            // }
-            // if(scrollTop >= document.getElementById("section3").offsetTop -2) {
-            //     document.querySelectorAll("#parallax__nav li").forEach(li => {
-            //         li.classList.remove("active");
-            //     });
-            //     document.querySelector("#parallax__nav li:nth-child(3)").classList.add("active");
-            // }
-            // if(scrollTop >= document.getElementById("section4").offsetTop) {
-            //     document.querySelectorAll("#parallax__nav li").forEach(li => {
-            //         li.classList.remove("active");
-            //     });
-            //     document.querySelector("#parallax__nav li:nth-child(4)").classList.add("active");
-            // }
-            // if(scrollTop >= document.getElementById("section5").offsetTop) {
-            //     document.querySelectorAll("#parallax__nav li").forEach(li => {
-            //         li.classList.remove("active");
-            //     });
-            //     document.querySelector("#parallax__nav li:nth-child(5)").classList.add("active");
-            // }
-            // if(scrollTop >= document.getElementById("section6").offsetTop) {
-            //     document.querySelectorAll("#parallax__nav li").forEach(li => {
-            //         li.classList.remove("active");
-            //     });
-            //     document.querySelector("#parallax__nav li:nth-child(6)").classList.add("active");
-            // }
-            // if(scrollTop >= document.getElementById("section7").offsetTop -2) {
-            //     document.querySelectorAll("#parallax__nav li").forEach(li => {
-            //         li.classList.remove("active");
-            //     });
-            //     document.querySelector("#parallax__nav li:nth-child(7)").classList.add("active");
-            // }
-            // if(scrollTop >= document.getElementById("section8").offsetTop -2) {
-            //     document.querySelectorAll("#parallax__nav li").forEach(li => {
-            //         li.classList.remove("active");
-            //     });
-            //     document.querySelector("#parallax__nav li:nth-child(8)").classList.add("active");
-            // }
-            // if(scrollTop >= document.getElementById("section9").offsetTop) {
-            //     document.querySelectorAll("#parallax__nav li").forEach(li => {
-            //         li.classList.remove("active");
-            //     });
-            //     document.querySelector("#parallax__nav li(9)").classList.add("active");
-            // }
+        // window.scroll(0, 1000);
+        // window.scroll({left: 0, top: 2000});
+        // window.scroll({left: 0, top: 2000, behavior: "smooth"});
 
-            // // for
-            // for (let i=0; i<=9; i++) {
-            //     if(scrollTop >= document.getElementById("section"+i).offsetTop) {
-            //         document.querySelectorAll("#parallax__nav li").forEach(li => {
-            //             li.classList.remove("active");
-            //         });
-            //     document.querySelector("#parallax__nav li:nth-child("+i+")").classList.add("active");
-            //     };
-            // };
+        // window.scrollTo(0, 1000);        // 절대 기준
+        // window.scrollTo({left: 0, top: 2000});
+        // window.scrollTo({left: 0, top: 2000, behavior: "smooth"});
 
-            // document.querySelector(".offset1").innerText = document.getElementById("section1").offsetTop;
-            // document.querySelector(".offset2").innerText = document.getElementById("section2").offsetTop;
-            // document.querySelector(".offset3").innerText = document.getElementById("section3").offsetTop;
-            // document.querySelector(".offset4").innerText = document.getElementById("section4").offsetTop;
-            // document.querySelector(".offset5").innerText = document.getElementById("section5").offsetTop;
-            // document.querySelector(".offset6").innerText = document.getElementById("section6").offsetTop;
-            // document.querySelector(".offset7").innerText = document.getElementById("section7").offsetTop;
-            // document.querySelector(".offset8").innerText = document.getElementById("section8").offsetTop;
-            // document.querySelector(".offset9").innerText = document.getElementById("section9").offsetTop;
+        // window.scrollBy(0, 1000);        // 상대 기준
+        // window.scrollBy({left: 0, top: 2000});
+        // window.scrollBy({left: 0, top: 2000, behavior: "smooth"});
     </script>
 </body>
 </html>
