--- a/javascript/effect/parallaxEffect03.html
+++ b/javascript/effect/parallaxEffect03.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>패럴랙스 이펙트 02</title>
+    <title>패럴랙스 이펙트 03</title>
     <link rel="stylesheet" href="../assets/css/parallax.css">
     <link rel="stylesheet" href="../assets/css/dracula.css">
 
@@ -17,11 +17,15 @@
         #parallax__nav {
             position: fixed;
             right: 20px;
-            top: 20px;
+            top: -200px;
             z-index: 2000;
             background-color: rgba(0, 0, 0, 0.4);
             padding: 20px 30px;
             border-radius: 50px;
+            transition: top, .4s ease;
+        }
+        #parallax__nav.show {
+            top: 20px;
         }
         #parallax__nav li {
             display: inline;
@@ -151,44 +155,6 @@
         .parallax__info li, .scrollTop {
             line-height: 1.4;
         }
-        #parallax__dot {
-            position: fixed;
-            right: 20px;
-            top: 50%;
-            transform: translateY(-50%);
-            z-index: 10000;
-            background-color: #00000040;
-            padding: 20px 10px;
-            border-radius: 30px;
-        }
-        #parallax__dot li {
-            position: relative;
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-            margin: 12px 8px;
-            box-shadow: 0 0 0 2px rgba(255, 255, 255, 0);
-            transition: box-shadow 0.2s ease;
-        }
-        #parallax__dot li a {
-            background: #fff;
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            border-radius: 50%;
-            transition: transform 0.2s ease;
-        }
-        #parallax__dot li span {
-            display: none;
-        }
-        #parallax__dot li.active {
-            box-shadow: 0 0 0 2px rgba(255, 255, 255, 1);
-        }
-        #parallax__dot li.active a {
-            transform: scale(0.4);
-        }
 
         @media (max-width: 800px) {
             #parallax__cont {
@@ -222,16 +188,40 @@
                 bottom: 10px;
             }
         }
+        #parallax__top {
+            position: fixed;
+            left: 50%;
+            bottom: -220px;
+            z-index: 10000;
+            transform: translateY(-50%);
+            width: 40px;
+            height: 40px;
+            background: rgba(0,0,0,0.4);
+            text-align: center;
+            line-height: 40px;
+            color: #fff;
+            border-radius: 50%;
+            padding: 0px;
+            cursor: pointer;
+            transition: all 0.3s;
+        }
+        #parallax__top.show {
+            bottom: 5px;
+        }
+        #parallax__top:hover {
+            background: #fff;
+            color: #000;
+        }
     </style>
 </head>
 <body>
     <header id="header">
-        <h1>Javascript Mouse Effect02</h1>
-        <p>패럴렉스 이펙트 - 사이드 메뉴</p>
+        <h1>Javascript Mouse Effect03</h1>
+        <p>패럴렉스 이펙트 - 숨김 메뉴</p>
         <ul>
             <li><a href="parallaxEffect01.html">1</a></li>
-            <li class="active"><a href="parallaxEffect02.html">2</a></li>
-            <li><a href="parallaxEffect03.html">3</a></li>
+            <li><a href="parallaxEffect02.html">2</a></li>
+            <li class="active"><a href="parallaxEffect03.html">3</a></li>
             <li><a href="parallaxEffect04.html">4</a></li>
             <li><a href="parallaxEffect05.html">5</a></li>
             <li><a href="parallaxEffect06.html">6</a></li>
@@ -240,20 +230,24 @@
     </header>
     <!-- //header -->
 
-    <nav id="parallax__dot">
+    <nav id="parallax__nav">
         <ul>
-            <li class="active"><a href="#section1"><span>메뉴1</span></a></li>
-            <li><a href="#section2"><span>메뉴2</span></a></li>
-            <li><a href="#section3"><span>메뉴3</span></a></li>
-            <li><a href="#section4"><span>메뉴4</span></a></li>
-            <li><a href="#section5"><span>메뉴5</span></a></li>
-            <li><a href="#section6"><span>메뉴6</span></a></li>
-            <li><a href="#section7"><span>메뉴7</span></a></li>
-            <li><a href="#section8"><span>메뉴8</span></a></li>
-            <li><a href="#section9"><span>메뉴9</span></a></li>
+            <li class="active"><a href="#section1">메뉴1</a></li>
+            <li><a href="#section2">메뉴2</a></li>
+            <li><a href="#section3">메뉴3</a></li>
+            <li><a href="#section4">메뉴4</a></li>
+            <li><a href="#section5">메뉴5</a></li>
+            <li><a href="#section6">메뉴6</a></li>
+            <li><a href="#section7">메뉴7</a></li>
+            <li><a href="#section8">메뉴8</a></li>
+            <li><a href="#section9">메뉴9</a></li>
         </ul>
     </nav>
     <!-- //nav -->
+
+    <div id="parallax__top">
+        Top
+    </div>
 
     <main id="parallax__cont">
         <div id="contents">
@@ -454,40 +448,61 @@
     </script>
 
     <script>
-        document.querySelectorAll("#parallax__dot a").forEach(el => {
-            el.addEventListener("click", e => {
-                e.preventDefault();
-
-                document.querySelector(el.getAttribute("href")).scrollIntoView({behavior: "smooth"});
-            })
-        });
-
         window.addEventListener("scroll", () => {
             let scrollTop = window.pageYOffset || window.scrollY || document.documentElement.scrollTop;
-            
-            document.querySelector("#parallax__info span").innerText = Math.floor(scrollTop);
 
-            document.querySelectorAll(".content__item").forEach((e,i) => {
-                if(scrollTop >= e.offsetTop -10) {
-                    document.querySelectorAll("#parallax__dot li").forEach(li => {
-                        li.classList.remove("active");
-                    })
-                    document.querySelector("#parallax__dot li:nth-child("+(i+1)+")").classList.add("active")
-                }
-            })
-        })
+            if(scrollTop > 0) {
+                document.querySelector("#parallax__nav").classList.add("show");
+            } else {
+                document.querySelector("#parallax__nav").classList.remove("show");
+            }
 
-        // window.scroll(0, 1000);
-        // window.scroll({left: 0, top: 2000});
-        // window.scroll({left: 0, top: 2000, behavior: "smooth"});
+            if(scrollTop > document.documentElement.scrollTop - window.innerheight) {     // 문서 전체 높이 - 브라우저 높이
+                document.querySelector("#parallax__top").classList.add("show");
+            } else {
+                document.querySelector("#parallax__top").classList.remove("show");
+            }
 
-        // window.scrollTo(0, 1000);        // 절대 기준
-        // window.scrollTo({left: 0, top: 2000});
-        // window.scrollTo({left: 0, top: 2000, behavior: "smooth"});
+            document.querySelector("#parallax__info span").innerText = Math.ceil(scrollTop);
+        });
 
-        // window.scrollBy(0, 1000);        // 상대 기준
-        // window.scrollBy({left: 0, top: 2000});
-        // window.scrollBy({left: 0, top: 2000, behavior: "smooth"});
+        document.querySelector("#parallax__top").addEventListener("click", () => {
+            window.scrollTo({left: 0, top: 0, behavior: "smooth"})
+        });
+
+        // let nowScroll = true;
+        // let lastScroll = 0;
+
+        // function scrollProgress() {
+        //     nowScroll = true;
+
+        //     setInterval(() => {
+        //         if(nowScroll) {
+        //             nowScroll = false;
+        //             hasScroll();
+        //         }
+        //     }, 300)
+        // }
+
+        // function hasScroll() {
+        //     let scrollTop = window.pageYOffset || window.scrollY || document.documentElement.scrollTop;
+
+        //     if(scrollTop < lastScroll) {
+        //         document.querySelector("#parallax__nav").classList.add("show")
+        //     } else {
+        //         document.querySelector("#parallax__nav").classList.remove("show")
+        //     }
+
+        //     if(scrollTop < lastScroll) {
+        //         document.querySelector("#parallax__top").classList.add("show")
+        //     } else {
+        //         document.querySelector("#parallax__top").classList.remove("show")
+        //     }
+
+        //     lastScroll = scrollTop;
+        // }
+
+        // window.addEventListener("scroll", scrollProgress);
     </script>
 </body>
 </html>
